put radio buttons in correct set and fix alignment

--- a/style.css
+++ b/style.css
@@ -22,13 +22,10 @@ body{
 .post{
     background-color: rgb(190, 190, 190);
     width: 600px;
-    height: 120px;
+    height: 125px;
     border-radius: 10px;
-    /* display: flex; */
-    /* flex-direction: column; */
     margin-left: 50px;
     margin-bottom: 15px;
-
 }
 
 .posts{
@@ -44,8 +41,8 @@ body{
     display: flex;
     justify-content: space-between;
     padding: 5px;
+    padding-left: 10px;
     padding-top: 15px;
-    align-items: start;
 }
 
 .articleDate{
